--- a/VISION3/styles.css
+++ b/VISION3/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background: url("C:/Users/jhonh/Documents/PAGINA WEB FINAL/PRINCIPA/IMAG-VIDE/fugos.jpg");
+    background: url("fugos.jpg");
     background-size: cover; 
     font-size: 25px;
     color: #ffffff;
